# spinitron

./: README.md  pyproject.toml
spinitron/: client.py  config.py  endpoint.py  session.py
spinitron/models/: Base.py  Factory.py  Listing.py  Persona.py  Playlist.py  Show.py  Spin.py  __init__.py
