[tool.poetry]
name = "spinitron"
version = "0.1.0"
description = "Wrapper for Spinitron API"
authors = ["slogsdon <me@slogsdon.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
requests_cache = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
